--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+
+
+.App{
+    height: 95vh;
+    width: 95vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+    margin: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.map{
+    height: 60vh;
+    width: 60vw;
+}
+
+.addLocationMarker {
+    background-image: url('./assets/images/SOH.png');
+    background-size: cover;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: green;
+    border: solid 3px green;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .addLocationMarker2 {
+    background-image: url("./assets/images/green_mark.png");
+    background-size: 20px 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    opacity: 1;
+    
+    
   }
-  to {
-    transform: rotate(360deg);
+
+  .marker {
+    background-image: url('./assets/images/BMC.jpg');
+    background-size: cover;
+    width: 2rem;
+    height: 2rem;
+    background-color: black;
+    border: solid 3px black;
   }
-}
